--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hanmant4615.github.io/newsapp",
+  "homepage": "https://hanmant4615.github.io/news-app",
   "name": "newsapp",
   "version": "0.1.0",
   "private": true,
